--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -33,12 +33,17 @@ nav {
 }
 
 @media (max-width: 650px) {
+	body {
+		overflow-x: hidden;
+	}
 	nav {
+		overflow-x: hidden;
 		padding-inline: 20px;
 		.left {
 			display: flex;
 			width: 100%;
 			justify-content: space-between;
+			flex-direction: row-reverse;
 			align-items: center;
 		}
 		.hamburger {
@@ -78,19 +83,20 @@ nav {
 			width: 50px;
 		}
 		.right ul {
+			top: 150px;
+
 			position: absolute;
-			right: -100vh;
+			left: -100%;
 			z-index: 100;
 			background-color: black;
 			height: 100%;
-			width: 100%;
+			width: 100vw;
 			a {
 				font-size: 12px;
 			}
 
 			&.showList {
-				top: 100px;
-				right: 0;
+				left: 0;
 				padding-inline: 40px;
 				flex-direction: column;
 				align-items: flex-start;
